# TALON

./: .gitignore  CMakeLists.txt  README.md  chekcpoint.pt  main.py  makeEnv.bat  makeEnv.sh  output.txt  server.py
game/: game.py
include/: AxisAndAllies.h  NeuralNetwork.h  Trainer.h
include/Game/: Game.h
nn/: __init__.py  model.py
rl/: agent.py
src/: AxisAndAllies.cpp  main.cpp
